--- a/SweetAndSavory/Views/Home/Index.cshtml
+++ b/SweetAndSavory/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using SweetAndSavory.Models; 
+
+@{
+    Layout = "_Layout"; 
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="text-center">
+        <img src="~/img/DIVINE.gif" alt="Filth">
+    </div>
 </div>
