--- a/SweetAndSavory/Views/Shared/_Layout.cshtml
+++ b/SweetAndSavory/Views/Shared/_Layout.cshtml
@@ -3,33 +3,34 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SweetAndSavory</title>
+    <title>@ViewData["Title"] - Divine Treats</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/site.css" type="text/css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SweetAndSavory</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid head">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active navMenu" aria-current="page" href="@Url.Action("Index", "Home")">
+                            <img class="navBrand"  src="@Url.Content("~/img/joan-craw.png")" alt="Gold-lips">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navMenu" href="@Url.Action("Index", "Flavors")">Flavors</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navMenu" href="@Url.Action("Index", "Treats")">Treatss</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
     <div class="container">
+        <div class="text-center">
+            <h1 class="header">Divine Treats</h1> 
+        </div>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -37,7 +38,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - SweetAndSavory - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 Ryan Broadsword - Divine Treats -
+            <a href="https://www.youtube.com/watch?v=6AQpxuilKoU" target="_blank">SLAP!</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
