--- a/SweetAndSavory/Views/Treats/Create.cshtml
+++ b/SweetAndSavory/Views/Treats/Create.cshtml
@@ -12,6 +12,9 @@
     <div class="fieldset newClient">
       @Html.LabelFor(model => model.TreatName)
       @Html.TextBoxFor(model => model.TreatName)
+
+      @Html.Label("Select flavor")
+      @Html.DropDownList("FlavorId")
     </div>
     <div class="newClient">
       <input type="submit" value="Add new Treat"/>
