--- a/SweetAndSavory/Views/Flavors/index.cshtml
+++ b/SweetAndSavory/Views/Flavors/index.cshtml
@@ -3,31 +3,23 @@
 }
 
 @using SweetAndSavory.Models;
-<div class="container">
-  <div class="text-center">
-    <img src="~/img/wire-hangers.gif" alt="CHRISTINA!" class="joan">
-  </div>
-  <h2 class="text-center">~Flavors~</h2>
+@model IEnumerable<SweetAndSavory.Models.Flavor>
 
-  @if (@Model.Count == 0)
+<div class="container">
+  <h2 class="text-center">Flavors for @User.Identity.Name</h2>
+
+  @if (@Model.Any())
   {
-    <h3>No flavors have been added yet!</h3>
-  } else {
-      <table class="table">
-    <thead class="thead-light">
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-    </thead>
-    <tbody>
-      @foreach(Flavor flavor in Model)
+    <ul>
+      @foreach (Flavor flavor in Model)
       {
-        <tr>  
-          <th scope="row">@Html.DisplayFor(modelFlavor => flavor.FlavorId)</th>
-          <td>@Html.ActionLink($"{flavor.FlavorName}", "Details", new { id = flavor.FlavorId })</td>
-        </tr>
+        <li>@Html.ActionLink($"{flavor.FlavorName}", "Details", new { id = flavor.FlavorId }) </li>
       }
-    </tbody>
-  </table>
+    </ul>
+  } 
+  else 
+  {
+    <h3> No flavors have been added yet </h3>
   }
 
   <p class="text-center navMenu" >@Html.ActionLink("Add new flavor", "Create")</p>
