--- a/SweetAndSavory/Views/Shared/_Layout.cshtml
+++ b/SweetAndSavory/Views/Shared/_Layout.cshtml
@@ -21,7 +21,10 @@
                         <a class="nav-link navMenu" href="@Url.Action("Index", "Flavors")">Flavors</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navMenu" href="@Url.Action("Index", "Treats")">Treatss</a>
+                        <a class="nav-link navMenu" href="@Url.Action("Index", "Treats")">Treats</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navMenu" href="@Url.Action("Index", "Account")">Account</a>
                     </li>
                 </ul>
             </div>
