--- a/SweetAndSavory/Views/Treats/index.cshtml
+++ b/SweetAndSavory/Views/Treats/index.cshtml
@@ -1,34 +1,26 @@
 @using SweetAndSavory.Models;
+@model IEnumerable<SweetAndSavory.Models.Treat>
 @{
   Layout = "_Layout";
 }
 
 <div class="container">
-  <div class="text-center">
-    <img src="~/img/pure-hell.gif" alt="shut-up-blanche" class="joan">
-  </div>
-  <h2 class="text-center">~Treats~</h2>
 
-  @if (@Model.Count == 0)
-  {
-    <h3>No treats have been added yet!</h3>
-} else {
-  <table class="table">
-    <thead class="thead-light">
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-    </thead>
-    <tbody>
-      @foreach(Treat treat in Model)
-      {
-        <tr>  
-          <th scope="row">@Html.DisplayFor(modelTreat => treat.TreatId)</th>
-          <td>@Html.ActionLink($"{treat.TreatName}", "Details", new { id = treat.TreatId })</td>
-        </tr>
-      }
-    </tbody>
-  </table>
+  <h2 class="text-center">Treats for @User.Identity.Name</h2>
+
+  @if (Model.Any())
+{
+  <ul>
+    @foreach (Treat treat in Model)
+    {
+      <li>@Html.ActionLink($"{treat.TreatName}", "Details", new { id = treat.TreatId })</li>
+    }
+  </ul>
 } 
+else
+{
+  <h3>No treats have been added yet!</h3>
+}
 
 <p class="text-center navMenu" >@Html.ActionLink("Add new treat", "Create")</p>
 </div>
