add styling, styling WIP

--- a/SweetAndSavory/Views/Flavors/Create.cshtml
+++ b/SweetAndSavory/Views/Flavors/Create.cshtml
@@ -22,4 +22,4 @@
   }
 </div>
 
-<p class="text-center navMenu">@Html.ActionLink("Show all flavors", "Index")</p> 
+<p class="text-center">@Html.ActionLink("Show all flavors", "Index")</p> 
