--- a/SweetAndSavory/Views/Treats/Details.cshtml
+++ b/SweetAndSavory/Views/Treats/Details.cshtml
@@ -25,6 +25,6 @@
 }
 </ul>
 
-<p class="text-center navMenu">@Html.ActionLink("Edit Treat", "Edit", new { id = Model.TreatId })</p>
-<p class="text-center navMenu">@Html.ActionLink("Delete Treat", "Delete", new { id = Model.TreatId })</p>
-<p class="text-center navMenu">@Html.ActionLink("Add New Treat", "Create", "Treats")</p>
+<p class="text-center">@Html.ActionLink("Edit Treat", "Edit", new { id = Model.TreatId })</p>
+<p class="text-center">@Html.ActionLink("Delete Treat", "Delete", new { id = Model.TreatId })</p>
+<p class="text-center">@Html.ActionLink("Add New Treat", "Create", "Treats")</p>
