--- a/SweetAndSavory/Views/Treats/index.cshtml
+++ b/SweetAndSavory/Views/Treats/index.cshtml
@@ -22,5 +22,5 @@ else
   <h3>No treats have been added yet!</h3>
 }
 
-<p class="text-center navMenu" >@Html.ActionLink("Add new treat", "Create")</p>
+<p class="text-center" >@Html.ActionLink("Add new treat", "Create")</p>
 </div>
