--- a/SweetAndSavory/Views/Flavors/Details.cshtml
+++ b/SweetAndSavory/Views/Flavors/Details.cshtml
@@ -25,7 +25,7 @@
 }
 </ul>
 
-<p class="text-center navMenu">@Html.ActionLink("Assign a Treat", "AddTreat", new { id = Model.FlavorId })</p>
-<p class="text-center navMenu">@Html.ActionLink("Edit Flavor", "Edit", new { id = Model.FlavorId })</p>
-<p class="text-center navMenu">@Html.ActionLink("Delete Flavor", "Delete", new { id = Model.FlavorId })</p>
-<p class="text-center navMenu">@Html.ActionLink("Add New Flavor", "Create", "Flavorss")</p>
+<p class="text-center">@Html.ActionLink("Assign a Treat", "AddTreat", new { id = Model.FlavorId })</p>
+<p class="text-center">@Html.ActionLink("Edit Flavor", "Edit", new { id = Model.FlavorId })</p>
+<p class="text-center">@Html.ActionLink("Delete Flavor", "Delete", new { id = Model.FlavorId })</p>
+<p class="text-center">@Html.ActionLink("Add New Flavor", "Create", "Flavorss")</p>
