--- a/SweetAndSavory/Views/Flavors/index.cshtml
+++ b/SweetAndSavory/Views/Flavors/index.cshtml
@@ -22,6 +22,6 @@
     <h3> No flavors have been added yet </h3>
   }
 
-  <p class="text-center navMenu" >@Html.ActionLink("Add new flavor", "Create")</p>
+  <p class="text-center" >@Html.ActionLink("Add new flavor", "Create")</p>
 </div>
 
