--- a/SweetAndSavory/Views/Shared/_Layout.cshtml
+++ b/SweetAndSavory/Views/Shared/_Layout.cshtml
@@ -8,23 +8,23 @@
     <link rel="stylesheet" href="~/css/site.css" type="text/css" />
 </head>
 <body>
-    <header>
+    <header id="nav">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid head">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active navMenu" aria-current="page" href="@Url.Action("Index", "Home")">
-                            <img class="navBrand"  src="@Url.Content("~/img/joan-craw.png")" alt="Gold-lips">
+                            <img style="height: 4rem;" class="navBrand"  src="@Url.Content("~/img/Divine_PinkFlamingos.png")" alt="Its-divine">
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navMenu" href="@Url.Action("Index", "Flavors")">Flavors</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Flavors")">Flavors</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navMenu" href="@Url.Action("Index", "Treats")">Treats</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Treats")">Treats</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navMenu" href="@Url.Action("Index", "Account")">Account</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Account")">Account</a>
                     </li>
                 </ul>
             </div>
@@ -34,15 +34,14 @@
         <div class="text-center">
             <h1 class="header">Divine Treats</h1> 
         </div>
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="text-center">
+        <div>
             &copy; 2022 Ryan Broadsword - Divine Treats -
-            <a href="https://www.youtube.com/watch?v=6AQpxuilKoU" target="_blank">SLAP!</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
